--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -29,7 +29,7 @@
     position: relative;
     word-break: break-all;
 }
-.headCard {
+.solidBorder {
     display: flexbox;
     word-break: break-all;
 }
